Cleanup on manual tree to reset at mount
